--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>com.github.austinv11</groupId>
 	<artifactId>Discord4J</artifactId>
-	<version>2.9.3</version>
+	<version>2.10-SNAPSHOT</version>
 	<description>A Java binding for the official Discord API, forked from the inactive https://github.com/nerd/Discord4J. Copyright (c) 2017, Licensed under GNU LGPLv3</description>
 	<url>https://github.com/austinv11/Discord4J</url>
 	<licenses>
